--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <option value="Выпечка">Выпечка</option>
                     <option value="Десерт">Десерт</option>
                     <option value="Прочее">Прочее</option>
+                    <option value="Фастфуд">Фастфуд</option>
                 </select>
             </div>
             <div class="filter-group">
@@ -68,6 +69,7 @@
                 <span class="category-badge" data-category="Выпечка">Выпечка</span>
                 <span class="category-badge" data-category="Десерт">Десерт</span>
                 <span class="category-badge" data-category="Прочее">Прочее</span>
+                <span class="category-badge" data-category="Фастфуд">Фастфуд</span>
             </div>
         </div>
     </div>
