--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <option value="Все">Все</option>
                     <option value="Завтрак">Завтрак</option>
                     <option value="Гарнир">Гарнир</option>
+                    <option value="Супы">Супы</option>
                     <option value="Курица">Курица</option>
                     <option value="Говядина">Говядина</option>
                     <option value="Морепродукты">Морепродукты</option>
@@ -60,6 +61,7 @@
                 <span class="category-badge active" data-category="Все">Все</span>
                 <span class="category-badge" data-category="Завтрак">Завтрак</span>
                 <span class="category-badge" data-category="Гарнир">Гарнир</span>
+                <span class="category-badge" data-category="Супы">Супы</span>
                 <span class="category-badge" data-category="Курица">Курица</span>
                 <span class="category-badge" data-category="Говядина">Говядина</span>
                 <span class="category-badge" data-category="Морепродукты">Морепродукты</span>
